# gemini-omni-sdk

./: CHANGELOG.md  CONTRIBUTING.md  README.md
go/: README.md  go.mod  go.sum
go/geminiomni/: client.go  client_test.go  contract_gen.go  slug.go  types.go
java/: README.md  build.gradle.kts  settings.gradle.kts
java/runapi-core/src/main/java/ai/runapi/core/contract/: ContractGen.java
java/runapi-gemini-omni/: build.gradle.kts
java/runapi-gemini-omni/src/main/java/ai/runapi/geminiomni/: GeminiOmniClient.java
java/runapi-gemini-omni/src/main/java/ai/runapi/geminiomni/resources/: CreateAudioResource.java  CreateCharacterResource.java  GeminiomniResource.java  TextToVideoResource.java
java/runapi-gemini-omni/src/main/java/ai/runapi/geminiomni/types/: CompletedTextToVideoResponse.java  CreateAudioModel.java  CreateAudioParams.java  CreateAudioResponse.java  CreateCharacterModel.java  CreateCharacterParams.java  CreateCharacterResponse.java  GeminiomniParamUtils.java  GeminiomniValue.java  TextToVideoModel.java  TextToVideoParams.java  TextToVideoResponse.java  Video.java  VideoClip.java  VideosTaskResponse.java
java/runapi-gemini-omni/src/test/java/ai/runapi/geminiomni/: GeminiOmniClientTest.java  GeminiOmniLiveApiSmokeTest.java  GeminiOmniLocalApiSmokeTest.java
js/: README.md  package.json
js/skills/gemini-omni/: README.md  SKILL.md
js/src/: client.ts  contract_gen.ts  index.ts  types.ts
js/src/resources/: create-audio.ts  create-character.ts  text-to-video.ts
js/tests/unit/: resources.test.ts
python/: README.md  pyproject.toml
python/src/runapi/gemini_omni/: __init__.py  client.py  contract_gen.py  types.py
python/src/runapi/gemini_omni/resources/: __init__.py  create_audio.py  create_character.py  text_to_video.py
python/tests/: test_client.py
ruby/: README.md  runapi-gemini-omni.gemspec  runapi-gemini_omni.gemspec
ruby/lib/: runapi-gemini_omni.rb
ruby/lib/runapi/: gemini_omni.rb
ruby/lib/runapi/gemini_omni/: client.rb  contract_gen.rb  types.rb
ruby/lib/runapi/gemini_omni/resources/: create_audio.rb  create_character.rb  text_to_video.rb
ruby/spec/: spec_helper.rb
ruby/spec/runapi/gemini_omni/: client_spec.rb
ruby/spec/runapi/gemini_omni/resources/: create_audio_spec.rb  create_character_spec.rb  text_to_video_spec.rb
