[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runapi-gemini-omni"
version = "0.1.0"
description = "Gemini Omni voice, character, and text-to-video client for RunAPI"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "RunAPI", email = "contact@runapi.ai" }]
keywords = ["runapi", "gemini", "gemini-omni", "text-to-video", "ai", "sdk"]
dependencies = ["runapi-core"]

[project.urls]
Homepage = "https://runapi.ai/models/gemini-omni"
Documentation = "https://runapi.ai/docs#sdk-gemini-omni"

[tool.hatch.build.targets.wheel]
packages = ["src/runapi"]

[tool.uv]
package = true

[tool.uv.sources]
runapi-core = { path = "../runapi-core", editable = true }

[dependency-groups]
dev = ["pytest>=8"]
